--- a/Patterns/pom.xml
+++ b/Patterns/pom.xml
@@ -17,6 +17,11 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+  
+  <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
 
   <dependencies>
     <dependency>
